04_results/Summary/envoy_proof_mtls1.2-cbc_20260718_143747.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1alpha3
  kind: EnvoyFilter
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1alpha3","kind":"EnvoyFilter","metadata":{"annotations":{},"name":"force-downgrade-httpbin-server","namespace":"default"},"spec":{"configPatches":[{"applyTo":"FILTER_CHAIN","match":{"context":"SIDECAR_INBOUND"},"patch":{"operation":"MERGE","value":{"transport_socket":{"name":"envoy.transport_sockets.tls","typed_config":{"@type":"type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext","common_tls_context":{"tls_params":{"ciph [...]
    creationTimestamp: "2026-07-18T12:51:12Z"
    generation: 1
    name: force-downgrade-httpbin-server
    namespace: default
    resourceVersion: "2121"
    uid: 15ed06a9-02d5-4e28-8070-44953b10e057
  spec:
    configPatches:
    - applyTo: FILTER_CHAIN
      match:
        context: SIDECAR_INBOUND
      patch:
        operation: MERGE
        value:
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_params:
                  cipher_suites:
                  - ECDHE-RSA-AES256-SHA384
                  - ECDHE-RSA-AES128-SHA256
                  - AES256-SHA
                  tls_maximum_protocol_version: TLSv1_2
                  tls_minimum_protocol_version: TLSv1_2
    workloadSelector:
      labels:
        app: httpbin
kind: List
metadata:
  resourceVersion: ""
